# phasorpy

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  example_lifetime.ipynb  prueba.py  prueba_graphical_components.py  prueba_multi_calibration.py  prueba_tutorial_components.py  pyproject.toml  requirements_dev.txt  requirements_min.txt  requirements_numpy.txt  setup.py
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-sdist.yml  build-wheels.yml  build_sdist.yml  build_wheels.yml  code-coverage.yml  coverage.yml  deploy-docs.yml  release-pypi.yml  run-tests.yml  stale-issues.yml
docs/: about.rst  acknowledgments.rst  code_of_conduct.rst  conf.py  contributing.rst  index.rst  license.rst  make.bat  phasor_approach.rst  release.rst  sphinxext.py
docs/_static/: switcher.json
docs/api/: _phasorpy.rst  _utils.rst  cli.rst  cluster.rst  color.rst  component.rst  components.rst  cursor.rst  cursors.rst  datasets.rst  experimental.rst  filter.rst  flim.rst  index.rst  io.rst  lifetime.rst  phasor.rst  phasorpy.rst  plot.rst  utils.rst
docs/api/_private/: _phasorpy.rst  _utils.rst  index.rst
docs/release/: 0.1.rst  0.10.rst  0.11.rst  0.12.rst  0.2.rst  0.3.rst  0.4.rst  0.5.rst  0.6.rst  0.7.rst  0.8.rst  0.9.rst  index.rst  template.rst
src/phasorpy/: __init__.py  __main__.py  _cluster.py  _component.py  _cursor.py  _filter.py  _io.py  _lifetime.py  _phasor.py  _phasor.pyx  _phasorpy.pyx  _typing.py  _utils.py  cli.py  cluster.py  clustering.py  color.py  component.py  components.py  conftest.py  cursor.py  cursors.py  datasets.py  experimental.py  filter.py  flim.py  io.py  lifetime.py  phasor.py  plot.py  utils.py  version.py
src/phasorpy/io/: __init__.py  _flimlabs.py  _h5.py  _io.py  _leica.py  _mcs_h5.py  _ometiff.py  _other.py  _simfcs.py  _utils.py
src/phasorpy/plot/: __init__.py  _functions.py  _lifetime_plots.py  _phasorplot.py  _phasorplot_fret.py  _plot.py  _spectral_plots.py
tests/: conftest.py  test__phasorpy.py  test__typing.py  test__utils.py  test_cli.py  test_cluster.py  test_color.py  test_component.py  test_components.py  test_cursor.py  test_cursors.py  test_cython.py  test_datasets.py  test_experimental.py  test_filter.py  test_flim.py  test_init.py  test_io.py  test_lifetime.py  test_nan.py  test_phasor.py  test_phasorpy.py  test_plot.py  test_typing.py  test_utils.py  test_utils_internal.py
tests/io/: _conftest.py  test_flimlabs.py  test_h5.py  test_io.py  test_leica.py  test_ometiff.py  test_other.py  test_simfcs.py
tests/plot/: test_functions.py  test_lifetime_plots.py  test_phasorplot.py  test_phasorplot_fret.py  test_plot.py  test_spectral_plots.py
tools/: build_manylinux.cmd  build_manylinux.sh  build_manylinux2014.cmd  build_manylinux2014.sh  sha256.py
tutorials/: README.rst  phasorpy_components.py  phasorpy_cursors.py  phasorpy_fret.py  phasorpy_introduction.py  phasorpy_lfd_workshop.py  phasorpy_lifetime_geometry.py  phasorpy_lifetime_to_signal.py  phasorpy_multi-harmonic.py  phasorpy_pca.py  phasorpy_phasor_from_lifetime.py  phasorpy_phasorplot.py  phasorpy_principle_components.py
tutorials/api/: README.rst  phasorpy_cluster.py  phasorpy_clustering.py  phasorpy_component.py  phasorpy_components.py  phasorpy_cursor.py  phasorpy_cursors.py  phasorpy_filter.py  phasorpy_filtering.py  phasorpy_fret.py  phasorpy_io.py  phasorpy_lifetime_to_signal.py  phasorpy_multi-harmonic.py  phasorpy_multi_harmonic.py  phasorpy_pca.py  phasorpy_phasor_from_lifetime.py  phasorpy_phasorplot.py
tutorials/applications/: README.rst  phasorpy_component_fit.py  phasorpy_fret_efficiency.py  phasorpy_multidimensional.py  phasorpy_nadh_concentration.py  phasorpy_nadh_fraction.py
tutorials/benchmarks/: README.rst  phasorpy_phasor_from_signal.py
tutorials/misc/: README.rst  phasorpy_apps.py  phasorpy_logo.py  phasorpy_phasor_from_signal.py
