[build-system]
requires = [
    "setuptools>=68",
    "numpy>=2.0.0",
    "cython>=3.2.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "phasorpy"
description = "Analysis of fluorescence lifetime and hyperspectral images using the phasor approach"
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version"]
dependencies = [
    # sync with [dependency-groups.run]
    # https://scientific-python.org/specs/spec-0000/
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    # "scikit-image>=0.23.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "tifffile>=2024.8.30",
    "xarray>=2024.6.0",
    "click",
    "pooch",
    "tqdm",
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
authors = [{ name = "PhasorPy Contributors" }]
license = "MIT"
license-files = ["LICENSE.txt"]

[project.urls]
Homepage = "https://www.phasorpy.org"
Documentation = "https://www.phasorpy.org/docs/stable/"
Download = "https://pypi.org/project/phasorpy/#files"
"Source code" = "https://github.com/phasorpy/phasorpy"
"Issue tracker" = "https://github.com/phasorpy/phasorpy/issues"
"Release notes" = "https://www.phasorpy.org/docs/stable/release"

[project.scripts]
phasorpy = "phasorpy.cli:main"

[project.optional-dependencies]
all = [
    # sync with [dependency-groups.optional]
    "fbdfile>=2025.9.18",
    "lfdfiles>=2024.5.24",
    "liffile>=2025.2.10",
    "ptufile>=2024.9.14",
    "sdtfile>=2024.5.24",
    "pawflim>=1.0.4",
    # "mkl-fft>=2.1.1",
]

[dependency-groups]
run = [
    # runtime dependencies; sync with [project.dependencies]
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "tifffile>=2024.8.30",
    "xarray>=2024.6.0",
    "click",
    "pooch",
    "tqdm",
]
optional = [
    # optional runtime dependencies; sync with [project.optional-dependencies]
    "fbdfile>=2025.9.18",
    "lfdfiles>=2024.5.24",
    "liffile>=2025.2.10",
    "ptufile>=2024.9.14",
    "sdtfile>=2024.5.24",
    "pawflim>=1.0.4",
]
minimal = [
    # minimal runtime versions for testing against oldest supported versions
    "numpy==2.0.2; python_version == 3.12",
    "matplotlib==3.9.4; python_version == 3.12",
    "pandas==2.2.3; python_version == 3.12",
    "scikit-learn==1.5.0; python_version == 3.12",
    "scipy==1.13.1; python_version == 3.12",
    "tifffile==2024.8.30; python_version == 3.12",
    "xarray==2024.6.0; python_version == 3.12",
    # optional
    "fbdfile==2025.9.18; python_version == 3.12",
    "lfdfiles==2024.5.24; python_version == 3.12",
    "liffile==2025.2.10; python_version == 3.12",
    "ptufile==2024.9.14; python_version == 3.12",
    "sdtfile==2024.5.24; python_version == 3.12",
    "pawflim==1.0.4; python_version == 3.12",
]
build = [
    # build requirements
    "cython>=3.2.2",
    "numpy>=2.0.0",
    "abi3audit",
    "build",
    "cibuildwheel",
    "packaging",
    "setuptools",
    "twine",
    "wheel",
]
test = [
    # test requirements
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-doctestplus",
    "pytest-runner",
]
docs = [
    # documentation build requirements
    "numpydoc",
    "pydata-sphinx-theme>=0.16.0",
    "sphinx<9",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-inline-tabs",
    "sphinx-issues",
    "sphinx_click",
    "sphinx_gallery",
]
lint = [
    # static code analysis requirements
    "autoflake",
    "black",
    "blackdoc",
    "codespell",
    "cython_lint",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
    "pre-commit-hooks",
    "pyupgrade",
]
dev = [
    # all development requirements
    {include-group = "run"},
    {include-group = "optional"},
    {include-group = "build"},
    {include-group = "test"},
    {include-group = "docs"},
    {include-group = "lint"},
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "phasorpy.__version__" }

[tool.setuptools.package-data]
phasorpy = ["py.typed"]

[tool.ruff.lint]
select = []

[tool.pylint.format]
max-line-length = 79
max-module-lines = 2500
good-names = [
    "i",
    "j",
    "k",
    "x",
    "y",
    "z",
    "c",
    "t",
    "ax",
    "fh",
    "dc",
    "re",
    "im",
]

[tool.pylint.messages_control]
disable = [
    "import-outside-toplevel",
    "wrong-import-order",
    "wrong-import-position",
]

[tool.black]
line-length = 79
target-version = ["py312", "py313"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 79

[tool.codespell]
skip = "*.html,*.css,*.js,*.r64,*.map,./.git,./data,./docs/_build,./docs/tutorials,PKG-INFO,_htmlcov,pyproject.toml"
ignore-words-list = "ba,compiletime,hist,nd,unparseable,HSI,coo"

[tool.mypy]
packages = ["phasorpy"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
plugins = []
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["phasorpy._phasorpy", "pooch.*", "scipy.*", "mkl_fft.*", "sklearn.*"]
ignore_missing_imports = true

[tool.coverage.run]
plugins = ["Cython.Coverage"]
omit = ["conftest.py", "__main__.py"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "plot.show()", "pragma: no cover", "pragma: ${PY_MAJOR_VERSION} no cover"]

[tool.coverage.html]
directory = "_htmlcov"

[tool.pytest.ini_options]
minversion = "7"
log_cli_level = "INFO"
# filterwarnings = ["error"]  # breaks debugging tests in VSCode (Sept. 2024)
xfail_strict = true
addopts = "-rfEXs --strict-config --strict-markers --doctest-modules --doctest-glob=*.py --doctest-glob=*.rst"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
]
testpaths = ["src/phasorpy", "tests", "docs"]
norecursedirs = [
    "._",
    ".git",
    ".github",
    ".vscode",
    ".mypy_cache",
    ".pytest_cache",
    "adhoc",
    "build",
    "docs/_build",
    "fixture",
    "htmlcov",
    "_htmlcov",
    "tutorials",
    "phasorpy.egg-info",
    "phasorpy_dev",
    "phasorpy-dev",
]

[tool.cibuildwheel]
skip = "cp38* cp39* cp310* cp311* cp313* cp314-* *musllinux* *i686 *ppc64le *s390x"
test-requires = ["scikit-learn", "lfdfiles", "fbdfile", "sdtfile", "ptufile", "liffile", "pawflim", "pytest", "pytest-cov", "pytest-runner", "pytest-doctestplus", "coverage"]
test-command = "pytest {project}/tests"
test-skip = ["cp314t*"]

[tool.cibuildwheel.test-environment]
SKIP_FETCH = "1"
MPLBACKEND = "agg"
